syntax = "proto3";

package hoz.proto.service;

option java_multiple_files = true;
option java_package = "net.hoz.api.service.player";

import "google/protobuf/empty.proto";

import "hoz/proto/Commons.proto";
import "resulter/proto/Resulter.proto";
import "hoz/proto/data/PlayerData.proto";

message PlayerIdHolder {
  string uuid = 1;
}

message PlayerDataResult {
  string uuid = 1;
  hoz.proto.data.PlayerDataContainer playerData = 2;
  resulter.proto.Result result = 3;
}

message PlayerDataUpdate {
  string uuid = 1;
  hoz.proto.data.PlayerDataContainer playerData = 2;
}

message PlayerStatusChangeRequest {
  string uuid = 1;
  hoz.proto.data.PlayerState newState = 2;
}

message PlayerStatusChangeResult {
  string uuid = 1;
  resulter.proto.Result result = 2;
}

message PlayerStatusHistoryResult {
  string uuid = 1;
  hoz.proto.data.PlayerHistoryContainer historyData = 2;
  resulter.proto.Result result = 3;
}

message PlayerLanguageRequest {
  string uuid = 1;
  string address = 2;
}

message PlayerLanguageRequestResult {
  string uuid = 1;
  string locale = 2;
}

service PlayerDataService {
  rpc dataFor(PlayerIdHolder) returns (PlayerDataResult);
  rpc historyFor(PlayerIdHolder) returns (PlayerStatusHistoryResult);
  rpc languageFor(PlayerLanguageRequest) returns (PlayerLanguageRequestResult);

  rpc changeStatusFor(PlayerStatusChangeRequest) returns (PlayerStatusChangeResult);

  rpc dataUpdateFor(PlayerDataUpdate) returns (google.protobuf.Empty);

  rpc subscribe(google.protobuf.Empty) returns (stream hoz.proto.data.PlayerDataContainer);
}
